--- a/cover.css
+++ b/cover.css
@@ -31,8 +31,12 @@ body {
 }
 body {
   color: #fff;
-  text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  background: url('cgato-negro-1280x1024.jpg') no-repeat center center fixed;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -123,6 +127,7 @@ body {
  */
 
 .mastfoot {
+  text-align: center;
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
 }
@@ -164,5 +169,12 @@ body {
 
 input {
   color: #000;
-  margin-bottom: 5px;
+}
+
+label {
+  margin-top: 5px;
+}
+
+.input-group {
+  margin-bottom: 10px;
 }
