--- a/cover.css
+++ b/cover.css
@@ -3,54 +3,60 @@
  */
 
 /* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
 
 /* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
 
 
 /*
  * Base structure
  */
+@media (min-width: 768px){
 
-html,
-body {
-  height: 100%;
-  background-color: #333;
-}
-body {
-  color: #fff;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  background: url('cgato-negro-1280x1024.jpg') no-repeat center center fixed;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  a,
+  a:focus,
+  a:hover {
+    color: #fff;
+  }
+  .btn-default,
+  .btn-default:hover,
+  .btn-default:focus {
+    color: #333;
+    text-shadow: none; /* Prevent inheritence from `body` */
+    background-color: #fff;
+    border: 1px solid #fff;
+  }
+  html,
+  body {
+    height: 100%;
+  }
+  body {
+    background-color: #333;
+    color: #fff;
+    text-shadow: 0 1px 3px rgba(0,0,0,.5);
+    background: url('cgato-negro-1280x1024.jpg') no-repeat center center fixed;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;    
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  input {
+    color: #000;
+  }
+  .main {
+    margin-top: 65px;
+  }
+  
 }
 
 /* Extra markup and styles */
 
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-}
-
-input {
-  color: #000;
-}
 
 label {
   margin-top: 5px;
@@ -60,9 +66,6 @@ label {
   margin-bottom: 10px;
 }
 
-.main {
-  margin-top: 65px;
-}
 
 .results {
   margin-top: 40px;
@@ -70,4 +73,17 @@ label {
 
 dl {
   margin-left: 35px;
+}
+
+.glyphicon-heart {
+  color: #c33333;
+  line-height: 1.5em;
+}
+
+img {
+  margin-top: 15px;
+}
+
+footer {
+  margin-top: 25px;
 }
